# HiggsAnalysis-CombinedLimit

./: CMakeLists.txt  Makefile  README.md  combine_logger.out  conda_env.yml  conda_env_exact.yml  env_standalone.sh  higgsCombine.ObsFit.MultiDimFit.mH125.root  set_conda_env_vars.sh
ceres/: CeresMinimizer.cc  CeresMinimizer_LinkDef.h
docs/: index.md  morefit-architecture-notes.md  morefit-dependencies.md  morefit-integration-plan.md  morefit-milestone-0.md
docs/part3/: commonstatsmethods.md  nonstandard.md  runningthetool.md
interface/: BayesianToyMC.h  CascadeMinimizer.h  CeresMinimizer.h  ChannelCompatibilityCheck.h  FitterAlgoBase.h  GoodnessOfFit.h  HybridNew.h  ILikelihoodBackend.h  JacknifeQuantile.h  MarkovChainMC.h  MultiDimFit.h  RandStartPt.h  Significance.h
morefit/include/: llvm_compiler.hh
src/: AsymptoticLimits.cc  BackendConfig.cc  BackendConfig.h  BayesianToyMC.cc  CMSInterferenceFunc.cxx  CascadeMinimizer.cc  ChannelCompatibilityCheck.cc  FitterAlgoBase.cc  GoodnessOfFit.cc  HybridNew.cc  MarkovChainMC.cc  MoreFitBackend.cc  MoreFitBackend.h  MultiDimFit.cc  ProfiledLikelihoodRatioTestStatExt.cc  RandStartPt.cc  RooFitBackend.cc  RooFitBackend.h  SequentialMinimizer.cc  Significance.cc
test/unit/: testCeresCovariance.cxx  testCeresCovarianceRankDef.cxx  testCeresLoadFailure.cxx
